<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/vnc_menu_input_mode" android:title="@string/vnc_input_mode">
        <menu>
            <group android:id="@+id/vnc_group_input_mode" android:checkableBehavior="single">
                <item android:id="@+id/vnc_mode_direct_hold_pan" android:title="@string/vnc_mode_direct_hold_pan" />
                <item android:id="@+id/vnc_mode_direct_swipe_pan" android:title="@string/vnc_mode_direct_swipe_pan" />
                <item android:id="@+id/vnc_mode_touchpad" android:title="@string/vnc_mode_touchpad" />
                <item android:id="@+id/vnc_mode_single_handed" android:title="@string/vnc_mode_single_handed" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/vnc_menu_send_keys" android:title="@string/vnc_send_keys">
        <menu>
            <item android:id="@+id/vnc_key_esc" android:title="Esc" />
            <item android:id="@+id/vnc_key_tab" android:title="Tab" />
            <item android:id="@+id/vnc_key_ctrl_c" android:title="Ctrl+C" />
            <item android:id="@+id/vnc_key_ctrl_v" android:title="Ctrl+V" />
            <item android:id="@+id/vnc_key_ctrl_z" android:title="Ctrl+Z" />
            <item android:id="@+id/vnc_key_alt_tab" android:title="Alt+Tab" />
            <item android:id="@+id/vnc_key_alt_f4" android:title="Alt+F4" />
            <item android:id="@+id/vnc_key_super" android:title="Super" />
        </menu>
    </item>
    <item android:id="@+id/vnc_menu_paste" android:title="@string/vnc_paste_clipboard" />
    <item android:id="@+id/vnc_menu_reset_zoom" android:title="@string/vnc_reset_zoom" />
    <item android:id="@+id/vnc_menu_close" android:title="@string/vnc_close_viewer" />
</menu>
